se crea las clase docente, estudiante, coordinador , se añaded todo lo de enviar mensaje queda el proyecto en fx